Added all modified pages, images, and fonts, and stylesheets.

--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -1,45 +1,63 @@
 ---
-title: Home | Rehab Staffing Solutions
+title: Contact Us | Rehab Staffing Solutions
 ---
 
-<div class="grid">
-  <div class="unit one-fifth hide-on-tablets">
-    &nbsp;
+<div id="contact">
+  <div id="contact-header" class="grid">
+    <div class="unit one-eighth hide-on-tablets">
+      &nbsp;
+    </div>
+    <div class="unit seven-eighths">
+      <h1>CONTACT US</h1>
+    </div>
   </div>
-  <div class="unit three-fifths main-banner">
-    <h1>
-      Contact Us.
-      <br/>
-      We're happy to help.
-    </h1>
+  <div id="contact-hero" class="grid">
+    <div class="unit whole">
+      <h2>"We're happy to help."</h2>
+    </div>
   </div>
-</div>
-<div class="grid">
-  <!--
-    <div class="unit half hide-on-tablets">
-      <div>
-        <%= image_tag('images/headshot-placeholder.png', class: "pull-right", style: "height: 18em;") %>
+  <div id="areas" class="grid">
+    <div class="contact-container">
+      <div class="unit half center-on-tablets">
+        <h3>AREAS WE SERVE</h3>
+        <p>
+          Marion, Citrus,
+          <br> Sumter, and Lake
+          <br> Counties in
+          <br> North Central&nbsp;Florida
+        </p>
+      </div>
+      <div class="unit half center-on-tablets removePadding">
+        <img id="areas-map" src="images/counties.png">
       </div>
     </div>
-  -->
-  <div class="unit whole center-on-tablets contact-info">
-    <h1 class="admin">
-      Administrative Contact
-    </h1>
-    <h1>
-      Jared Koumentis
-      <br/>
-      Chief Operations Officer
-    </h1>
-    <p class="email-and-address">
-      Jared@RehabStaffingSolutions.com
-    </p>
-    <p class="email-and-address">
-      325 SE 52nd CT
-      <br/>
-      Ocala, FL 34471
-      <br/>
-      352-387-7831
-    </p>
+  </div>
+  <div class="grid removePadding">
+    <div class="unit one-eighth hide-on-tablets">
+      &nbsp;
+    </div>
+    <div class="unit seven-eighths removePadding">
+      <div id="contact-info" class="unit golden-small center-on-tablets removePadding">
+        <h4>Administrative Contact</h4>
+        <p>
+          <b>Lyndi Dyson</b>
+          <br> Business Administrator
+          <br>
+          <a href="mailto:lyndi@rehabstaffingsolutions.com">lyndi@rehabstaffingsolutions.com</a>
+          <br>
+          <a href="tel:13522393820">352-239-3820</a>
+        </p>
+        <p>
+          13780 S.E. 100th Ave.
+          <br> Belleview, FL. 34420
+        </p>
+      </div>
+
+      <div class="unit golden-large center-on-tablets removePadding">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3488.8513969005976!2d-81.98936268490861!3d29.021388982265886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e7cf0de5e92b6f%3A0xa16dcc328cd4ef26!2s13780+SE+100th+Ave%2C+Belleview%2C+FL+34420!5e0!3m2!1sen!2sus!4v1458878013022"
+          width="100%" height="450" frameborder="0" style="border:0" allowfullscreen>
+        </iframe>
+      </div>
+    </div>
   </div>
 </div>
