--- a/source/shared/_header.html.erb
+++ b/source/shared/_header.html.erb
@@ -8,11 +8,13 @@
       </div>
       <div class="unit three-fifths nav-links center-on-tablets">
         <p>
-          <%= link_to("Home", "/") %>
-          |
-          <%= link_to("Our Values", "/values.html") %>
-          |
-          <%= link_to("Contact", "/contact.html") %>
+          <%= link_to("HOME", "/") %>
+
+          <%= link_to("ABOUT US", "/about.html") %>
+
+          <%= link_to("OUR STAFF", "/staff.html") %>
+
+          <%= link_to("CONTACT", "/contact.html") %>
         </p>
       </div>
     </div>
