--- a/source/stylesheets/gridism.css
+++ b/source/stylesheets/gridism.css
@@ -20,12 +20,10 @@
 .grid .unit {
   float: left;
   width: 100%;
-  padding: 10px;
 }
 
 /* This ensures the outer gutters are equal to the (doubled) inner gutters. */
 .grid .unit:first-child { padding-left: 20px; }
-.grid .unit:last-child { padding-right: 20px; }
 
 /* Nested grids already have padding though, so let’s nuke it */
 .unit .unit:first-child { padding-left: 0; }
@@ -56,9 +54,11 @@
 .grid .one-quarter,    .grid .w-1-4 { width: 25%; }
 .grid .three-quarters, .grid .w-3-4 { width: 75%; }
 .grid .one-fifth,      .grid .w-1-5 { width: 20%; }
+.grid .one-eighth,      .grid .w-1-8 { width: 12.5%; }
 .grid .two-fifths,     .grid .w-2-5 { width: 40%; }
 .grid .three-fifths,   .grid .w-3-5 { width: 60%; }
 .grid .four-fifths,    .grid .w-4-5 { width: 80%; }
+.grid .seven-eighths,   .grid .w-7-8 { width: 87.5%; }
 .grid .golden-small,   .grid .w-g-s { width: 38.2716%; } /* Golden section: smaller piece */
 .grid .golden-large,   .grid .w-g-l { width: 61.7283%; } /* Golden section: larger piece */
 
@@ -125,7 +125,7 @@
   }
 }
 
-@media screen and (max-width: 710px) {
+@media screen and (max-width: 768px) {
   .grid .unit {
     width: 100% !important;
     padding-left: 20px;
@@ -150,7 +150,7 @@
   }
 }
 
-@media screen and (min-width: 710px) {
+@media screen and (min-width: 768px) {
   .only-tablets {
     display: none !important;
   }
