Modified navigation, css, and added footer partial.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -18,5 +18,6 @@
   <body class="<%= page_classes %>">
     <%= partial "shared/header" %>
     <%= yield %>
+    <%= partial "shared/footer" %>
   </body>
 </html>
