Modified nav html and css. Made all header text center on mobile.

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -7,7 +7,7 @@ title: About Us | Rehab Staffing Solutions
   <div class="unit one-eighth hide-on-tablets">
     &nbsp;
   </div>
-  <div class="unit seven-eighths">
+  <div class="unit seven-eighths center-on-tablets">
     <h1>ABOUT US</h1>
   </div>
 </div>
