--- a/source/shared/_header.html.erb
+++ b/source/shared/_header.html.erb
@@ -1,5 +1,5 @@
-<nav style="background-color: pink;">
-  <div class="logo center-on-tablets">
+<nav>
+  <div class="logo">
     <a href="/">
       <%= image_tag('images/logo.svg', :class => "logo-image") %>
     </a>
