--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -7,7 +7,7 @@ title: Contact Us | Rehab Staffing Solutions
     <div class="unit one-eighth hide-on-tablets">
       &nbsp;
     </div>
-    <div class="unit seven-eighths">
+    <div class="unit seven-eighths center-on-tablets">
       <h1>CONTACT US</h1>
     </div>
   </div>
