--- a/source/staff.html.erb
+++ b/source/staff.html.erb
@@ -7,7 +7,7 @@ title: Home | Rehab Staffing Solutions
     <div class="unit one-eighth hide-on-tablets">
       &nbsp;
     </div>
-    <div class="unit seven-eighths">
+    <div class="unit seven-eighths center-on-tablets">
       <h1>OUR STAFF</h1>
     </div>
   </div>
