Adding final stuff

--- a/source/shared/_header.html.erb
+++ b/source/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <nav>
   <div class="logo">
     <a href="/">
-      <%= image_tag('images/logo.svg', :class => "logo-image") %>
+      <%= image_tag('images/logo.png', :class => "logo-image") %>
     </a>
   </div>
 
