[FIX] Make images more web friendly

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -103,7 +103,7 @@ nav:after {
 
 /* Home Page */
 #home {
-  background: url("../images/hero-home.png") no-repeat center center;
+  background: url("../images/hero-home.jpg") no-repeat center center;
   background-size: cover;
   min-height: 1000px;
 }
@@ -127,7 +127,7 @@ nav:after {
   background-color: #d75c35;
 }
 #value-hero {
-  background: url("../images/hero-values.png") no-repeat center;
+  background: url("../images/hero-values.jpg") no-repeat center;
   background-size: cover;
   min-height: 275px;
   background-position: 10% 35%;
@@ -202,7 +202,7 @@ ul.staff-member li p {
   background-color: #ffbf00;
 }
 #contact-hero {
-  background: url("../images/hero-contact.png") no-repeat center;
+  background: url("../images/hero-contact.jpg") no-repeat center;
   background-size: cover;
   min-height: 275px;
   background-position: 10% 15%;
