[FIX] Uses web jpg for staff photos and css masking for circle shape

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -189,12 +189,14 @@ ul.staff-member li p {
   height: 200px;
   margin: 0 auto;
   display: block;
+  border-radius: 50%;
 }
 .other {
   width: 150px;
   height: 150px;
   margin: 0 auto;
   display: block;
+  border-radius: 50%;
 }
 
 /* Contact Page */
