--- a/source/staff.html.erb
+++ b/source/staff.html.erb
@@ -19,14 +19,14 @@ title: Staff | Rehab Staffing Solutions
   <div class="grid">
     <div id="excecutive-staff" class="exec-container">
       <div class="unit half center-on-tablets">
-        <img src="images/staff/boyd-cantrell.png" class="exec">
+        <img src="images/staff/boyd-cantrell-web.jpg" class="exec">
         <p>
           <b>Boyd Cantrell</b>
           <br> DPT
         </p>
       </div>
       <div class="unit half center-on-tablets">
-        <img src="images/staff/lisa-cantrell.png" class="exec">
+        <img src="images/staff/lisa-cantrell-web.jpg" class="exec">
         <p>
           <b>Lisa Cantrell</b>
           <br> PTA
@@ -44,119 +44,119 @@ title: Staff | Rehab Staffing Solutions
     <div class="staff-container center-on-tablets">
       <ul class="staff-member removePadding">
         <li>
-          <img src="images/staff/albert-edwards.png" class="other">
+          <img src="images/staff/albert-edwards-web.jpg" class="other">
           <p>
             <b>Albert Edwards</b>
             <br> DPT
           </p>
         </li>
         <li>
-          <img src="images/staff/amin-khan.png" class="other">
+          <img src="images/staff/amin-khan-web.jpg" class="other">
           <p>
             <b>Amin Khan</b>
             <br> PT
           </p>
         </li>
         <li>
-          <img src="images/staff/chante-perry.png" class="other">
+          <img src="images/staff/chante-perry-web.jpg" class="other">
           <p>
             <b>Chante Perry</b>
             <br> DPT
           </p>
         </li>
         <li>
-          <img src="images/staff/dana-keene.png" class="other">
+          <img src="images/staff/dana-keene-web.jpg" class="other">
           <p>
             <b>Dana Keene</b>
             <br> PTA
           </p>
         </li>
         <li>
-          <img src="images/staff/debra-barker.png" class="other">
+          <img src="images/staff/debra-barker-web.jpg" class="other">
           <p>
             <b>Debra Barker</b>
             <br> PTA
           </p>
         </li>
         <li>
-          <img src="images/staff/dustin-hawkins.png" class="other">
+          <img src="images/staff/dustin-hawkins-web.jpg" class="other">
           <p>
             <b>Dustin Hawkins</b>
             <br> PTA
           </p>
         </li>
         <li>
-          <img src="images/staff/emilia-rodriguez.png" class="other">
+          <img src="images/staff/emilia-rodriguez-web.jpg" class="other">
           <p>
             <b>Emilia Rodriguez</b>
             <br> PTA
           </p>
         </li>
         <li>
-          <img src="images/staff/jacob-kimmig.png" class="other">
+          <img src="images/staff/jacob-kimmig-web.jpg" class="other">
           <p>
             <b>Jacob Kimmig</b>
             <br> Rehab Tech
           </p>
         </li>
         <li>
-          <img src="images/staff/gwen-tobianski.png" class="other">
+          <img src="images/staff/gwen-tobianski-web.jpg" class="other">
           <p>
             <b>Gwen Tobianski</b>
             <br> OT
           </p>
         </li>
         <li>
-          <img src="images/staff/jennifer-mcmurray.png" class="other">
+          <img src="images/staff/jennifer-mcmurray-web.jpg" class="other">
           <p>
             <b>Jennifer McMurray</b>
             <br> PTA
           </p>
         </li>
         <li>
-          <img src="images/staff/lisa-george.png" class="other">
+          <img src="images/staff/lisa-george-web.jpg" class="other">
           <p>
             <b>Lisa George</b>
             <br> PT
           </p>
         </li>
         <li>
-          <img src="images/staff/lyndi-dyson.png" class="other">
+          <img src="images/staff/lyndi-dyson-web.jpg" class="other">
           <p>
             <b>Lyndi Dyson</b>
             <br> Administrator
           </p>
         </li>
         <li>
-          <img src="images/staff/maria-ceballos.png" class="other">
+          <img src="images/staff/maria-ceballos-web.jpg" class="other">
           <p>
             <b>Maria Ceballos</b>
             <br> DPT
           </p>
         </li>
         <li>
-          <img src="images/staff/michelle-bixler.png" class="other">
+          <img src="images/staff/michelle-bixler-web.jpg" class="other">
           <p>
             <b>Michelle Bixler</b>
             <br> PTA
           </p>
         </li>
         <li>
-          <img src="images/staff/samantha-stryke.png" class="other">
+          <img src="images/staff/samantha-stryke-web.jpg" class="other">
           <p>
             <b>Samantha Stryke</b>
             <br> PTA
           </p>
         </li>
         <li>
-          <img src="images/staff/stephen-lescarbeau.png" class="other">
+          <img src="images/staff/stephen-lescarbeau-web.jpg" class="other">
           <p>
             <b>Stephen Lescarbeau</b>
             <br> PTA
           </p>
         </li>
         <li>
-          <img src="images/staff/steve-dysert.png" class="other">
+          <img src="images/staff/steve-dysert-web.jpg" class="other">
           <p>
             <b>Steve Dysert</b>
             <br> OT
