Added Mike D to the staff page.

--- a/source/staff.html.erb
+++ b/source/staff.html.erb
@@ -66,6 +66,14 @@ title: Staff | Rehab Staffing Solutions
         DPT
       </p>
     </div>
+    <div class="staff-block">
+      <img src="images/staff/mike-dessaint.png" class="other">
+      <p>
+        <b>Mike Dessaint</b>
+        <br>
+        PTA
+      </p>
+    </div>
 
     <div class="staff-block">
       <img src="images/staff/lyndi-dyson-web.jpg" class="other">
