[FIX] Convert Mike's picture from png to jpg for web

--- a/source/staff.html.erb
+++ b/source/staff.html.erb
@@ -67,7 +67,7 @@ title: Staff | Rehab Staffing Solutions
       </p>
     </div>
     <div class="staff-block">
-      <img src="images/staff/mike-dessaint.png" class="other">
+      <img src="images/staff/mike-dessaint.jpg" class="other">
       <p>
         <b>Mike Dessaint</b>
         <br>
