--- a/source/staff.html.erb
+++ b/source/staff.html.erb
@@ -66,14 +66,6 @@ title: Staff | Rehab Staffing Solutions
         DPT
       </p>
     </div>
-    <div class="staff-block">
-      <img src="images/staff/mike-dessaint.jpg" class="other">
-      <p>
-        <b>Mike Dessaint</b>
-        <br>
-        PTA
-      </p>
-    </div>
 
     <div class="staff-block">
       <img src="images/staff/lyndi-dyson-web.jpg" class="other">
@@ -166,6 +158,15 @@ title: Staff | Rehab Staffing Solutions
     </div>
 
     <div class="staff-block">
+      <img src="images/staff/anthony-quintana.jpg" class="other">
+      <p>
+        <b>Anthony Quintana</b>
+        <br>
+        PTA
+      </p>
+    </div>
+
+    <div class="staff-block">
       <img src="images/staff/emilia-rodriguez-web.jpg" class="other">
       <p>
         <b>Emilia Rodriguez</b>
@@ -178,6 +179,15 @@ title: Staff | Rehab Staffing Solutions
       <img src="images/staff/samantha-stryke-web.jpg" class="other">
       <p>
         <b>Samantha Stryke</b>
+        <br>
+        PTA
+      </p>
+    </div>
+
+    <div class="staff-block">
+      <img src="images/staff/kelly-thyben.jpg" class="other">
+      <p>
+        <b>Kelly Thyben</b>
         <br>
         PTA
       </p>
