Added Q Robinson staff page.

--- a/source/staff.html.erb
+++ b/source/staff.html.erb
@@ -167,6 +167,15 @@ title: Staff | Rehab Staffing Solutions
     </div>
 
     <div class="staff-block">
+      <img src="images/staff/quaterian-robinson.jpg" class="other">
+      <p>
+        <b>Quaterian Robinson</b>
+        <br>
+        COTA
+      </p>
+    </div>
+
+    <div class="staff-block">
       <img src="images/staff/emilia-rodriguez-web.jpg" class="other">
       <p>
         <b>Emilia Rodriguez</b>
