Add more images of new people

--- a/source/staff.html.erb
+++ b/source/staff.html.erb
@@ -86,6 +86,24 @@ title: Staff | Rehab Staffing Solutions
     </div>
 
     <div class="staff-block">
+      <img src="images/staff/dorothy-fox-web.jpg" class="other">
+      <p>
+        <b>Dorothy Fox</b>
+        <br>
+        OT
+      </p>
+    </div>
+
+    <div class="staff-block">
+      <img src="images/staff/joy-garza-web.jpg" class="other">
+      <p>
+        <b>Joy Garza</b>
+        <br>
+        DPT
+      </p>
+    </div>
+
+    <div class="staff-block">
       <img src="images/staff/lisa-george-web.jpg" class="other">
       <p>
         <b>Lisa George</b>
@@ -118,6 +136,15 @@ title: Staff | Rehab Staffing Solutions
         <b>Amin Khan</b>
         <br>
         PT
+      </p>
+    </div>
+
+    <div class="staff-block">
+      <img src="images/staff/brooke-kimmig-web.jpg" class="other">
+      <p>
+        <b>Brooke Kimmig</b>
+        <br>
+        Business Assistant
       </p>
     </div>
 
