[FEAT] Updates staff pictures

--- a/source/staff.html.erb
+++ b/source/staff.html.erb
@@ -50,6 +50,15 @@ title: Staff | Rehab Staffing Solutions
     </div>
 
     <div class="staff-block">
+      <img src="images/staff/kerri-barrentine-web.jpg" class="other">
+      <p>
+        <b>Kerri Barrentine</b>
+        <br>
+        OT
+      </p>
+    </div>
+
+    <div class="staff-block">
       <img src="images/staff/michelle-bixler-web.jpg" class="other">
       <p class="align-center">
         <b>Michelle Bixler</b>
@@ -86,11 +95,11 @@ title: Staff | Rehab Staffing Solutions
     </div>
 
     <div class="staff-block">
-      <img src="images/staff/dorothy-fox-web.jpg" class="other">
+      <img src="images/staff/shane-fink-web.jpg" class="other">
       <p>
-        <b>Dorothy Fox</b>
+        <b>Shane Fink</b>
         <br>
-        OT
+        PTA
       </p>
     </div>
 
@@ -203,18 +212,18 @@ title: Staff | Rehab Staffing Solutions
     </div>
 
     <div class="staff-block">
-      <img src="images/staff/samantha-stryke-web.jpg" class="other">
+      <img src="images/staff/sean-stockdale-web.jpg" class="other">
       <p>
-        <b>Samantha Stryke</b>
+        <b>Sean Stockdale</b>
         <br>
-        PTA
+        COTA
       </p>
     </div>
 
     <div class="staff-block">
-      <img src="images/staff/kelly-thyben.jpg" class="other">
+      <img src="images/staff/samantha-stryke-web.jpg" class="other">
       <p>
-        <b>Kelly Thyben</b>
+        <b>Samantha Stryke</b>
         <br>
         PTA
       </p>
