[COPY] Update Jacob's title

--- a/source/staff.html.erb
+++ b/source/staff.html.erb
@@ -162,7 +162,7 @@ title: Staff | Rehab Staffing Solutions
       <p>
         <b>Jacob Kimmig</b>
         <br>
-        Rehab Tech
+        Administrator
       </p>
     </div>
 
