--- a/source/staff.html.erb
+++ b/source/staff.html.erb
@@ -113,6 +113,15 @@ title: Staff | Rehab Staffing Solutions
     </div>
 
     <div class="staff-block">
+      <img src="images/staff/jennifer-harris-web.jpg" class="other">
+      <p>
+        <b>Jennifer Harris</b>
+        <br>
+        PTA
+      </p>
+    </div>
+
+    <div class="staff-block">
       <img src="images/staff/dustin-hawkins-web.jpg" class="other">
       <p>
         <b>Dustin Hawkins</b>
