updates staff listing

--- a/source/staff.html.erb
+++ b/source/staff.html.erb
@@ -40,14 +40,6 @@ title: Staff | Rehab Staffing Solutions
     </div>
   </div>
   <div class="grid wrap wider align-center center-on-tablets">
-    <div class="staff-block">
-      <img src="images/staff/debra-barker-web.jpg" class="other">
-      <p class="align-center">
-        <b>Debra Barker</b>
-        <br>
-        PTA
-      </p>
-    </div>
 
     <div class="staff-block">
       <img src="images/staff/kerri-barrentine-web.jpg" class="other">
@@ -62,6 +54,15 @@ title: Staff | Rehab Staffing Solutions
       <img src="images/staff/michelle-bixler-web.jpg" class="other">
       <p class="align-center">
         <b>Michelle Bixler</b>
+        <br>
+        PTA
+      </p>
+    </div>
+
+    <div class="staff-block">
+      <img src="images/staff/eva-ceballos-web.jpg" class="other">
+      <p>
+        <b>Eva Ceballos</b>
         <br>
         PTA
       </p>
@@ -125,6 +126,15 @@ title: Staff | Rehab Staffing Solutions
       <img src="images/staff/dustin-hawkins-web.jpg" class="other">
       <p>
         <b>Dustin Hawkins</b>
+        <br>
+        PTA
+      </p>
+    </div>
+
+    <div class="staff-block">
+      <img src="images/staff/naomi-kane-web.jpg" class="other">
+      <p>
+        <b>Naomi Kane</b>
         <br>
         PTA
       </p>
