Adds new people to site

--- a/source/staff.html.erb
+++ b/source/staff.html.erb
@@ -78,6 +78,15 @@ title: Staff | Rehab Staffing Solutions
     </div>
 
     <div class="staff-block">
+      <img src="images/staff/melissa-cordell-web.jpg" class="other">
+      <p>
+        <b>Melissa Cordell</b>
+        <br>
+        OT
+      </p>
+    </div>
+
+    <div class="staff-block">
       <img src="images/staff/albert-edwards-web.jpg" class="other">
       <p>
         <b>Albert Edwards</b>
@@ -163,7 +172,7 @@ title: Staff | Rehab Staffing Solutions
       <p>
         <b>Jacob Kimmig</b>
         <br>
-        Administrator
+        Administrator / COO
       </p>
     </div>
 
@@ -227,6 +236,24 @@ title: Staff | Rehab Staffing Solutions
         <b>Samantha Stryke</b>
         <br>
         PTA
+      </p>
+    </div>
+
+    <div class="staff-block">
+      <img src="images/staff/deborah-tatem-web.jpg" class="other">
+      <p>
+        <b>Deborah Tatem</b>
+        <br>
+        COTA
+      </p>
+    </div>
+
+    <div class="staff-block">
+      <img src="images/staff/justin-thompson-web.jpg" class="other">
+      <p>
+        <b>Justin Thompson</b>
+        <br>
+        DPT
       </p>
     </div>
   </div>
