add daphnee and update contact info

--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -40,12 +40,12 @@ title: Contact Us | Rehab Staffing Solutions
       <div id="contact-info" class="unit golden-small center-on-tablets removePadding">
         <h4>Administrative Contact</h4>
         <p>
-          <b>Lyndi Dyson</b>
-          <br> Business Administrator
+          <b>Jacob Kimmig</b>
+          <br> Business Administrator / COO
           <br>
-          <a href="mailto:lyndi@rehabstaffingsolutions.com">lyndi@rehabstaffingsolutions.com</a>
+          <a href="mailto:jacob@rehabstaffingsolutions.com">jacob@rehabstaffingsolutions.com</a>
           <br>
-          <a href="tel:13522393820">352-239-3820</a>
+          <a href="tel:13522393820">352-789-0713</a>
         </p>
         <p>
           13780 S.E. 100th Ave.
