--- a/source/staff.html.erb
+++ b/source/staff.html.erb
@@ -195,6 +195,15 @@ title: Staff | Rehab Staffing Solutions
     </div>
 
     <div class="staff-block">
+      <img src="images/staff/daphnee-paulin-web.jpg" class="other">
+      <p>
+        <b>Daphnee Paulin</b>
+        <br>
+        COTA
+      </p>
+    </div>
+
+    <div class="staff-block">
       <img src="images/staff/anthony-quintana.jpg" class="other">
       <p>
         <b>Anthony Quintana</b>
