Update staff page

--- a/source/staff.html.erb
+++ b/source/staff.html.erb
@@ -42,15 +42,6 @@ title: Staff | Rehab Staffing Solutions
   <div class="grid wrap wider align-center center-on-tablets">
 
     <div class="staff-block">
-      <img src="images/staff/kerri-barrentine-web.jpg" class="other">
-      <p>
-        <b>Kerri Barrentine</b>
-        <br>
-        OT
-      </p>
-    </div>
-
-    <div class="staff-block">
       <img src="images/staff/michelle-bixler-web.jpg" class="other">
       <p class="align-center">
         <b>Michelle Bixler</b>
@@ -87,6 +78,15 @@ title: Staff | Rehab Staffing Solutions
     </div>
 
     <div class="staff-block">
+      <img src="images/staff/sirles-dewese-web.jpg" class="other">
+      <p>
+        <b>Sirles Dewese</b>
+        <br>
+        PTA
+      </p>
+    </div>
+
+    <div class="staff-block">
       <img src="images/staff/albert-edwards-web.jpg" class="other">
       <p>
         <b>Albert Edwards</b>
@@ -105,11 +105,11 @@ title: Staff | Rehab Staffing Solutions
     </div>
 
     <div class="staff-block">
-      <img src="images/staff/lisa-george-web.jpg" class="other">
+      <img src="images/staff/stephanie-gerrard-web.jpg" class="other">
       <p>
-        <b>Lisa George</b>
+        <b>Stephanie Gerrard</b>
         <br>
-        PT
+        OT
       </p>
     </div>
 
@@ -141,15 +141,6 @@ title: Staff | Rehab Staffing Solutions
     </div>
 
     <div class="staff-block">
-      <img src="images/staff/dana-keene-web.jpg" class="other">
-      <p>
-        <b>Dana Keene</b>
-        <br>
-        PTA
-      </p>
-    </div>
-
-    <div class="staff-block">
       <img src="images/staff/amin-khan-web.jpg" class="other">
       <p>
         <b>Amin Khan</b>
@@ -159,20 +150,20 @@ title: Staff | Rehab Staffing Solutions
     </div>
 
     <div class="staff-block">
-      <img src="images/staff/brooke-kimmig-web.jpg" class="other">
-      <p>
-        <b>Brooke Kimmig</b>
-        <br>
-        Business Assistant
-      </p>
-    </div>
-
-    <div class="staff-block">
       <img src="images/staff/jacob-kimmig-web.jpg" class="other">
       <p>
         <b>Jacob Kimmig</b>
         <br>
         Administrator / COO
+      </p>
+    </div>
+
+    <div class="staff-block">
+      <img src="images/staff/shawn-lavertue-web.jpg" class="other">
+      <p>
+        <b>Shawn Lavertue</b>
+        <br>
+        PTA
       </p>
     </div>
 
@@ -200,6 +191,15 @@ title: Staff | Rehab Staffing Solutions
         <b>Daphnee Paulin</b>
         <br>
         COTA
+      </p>
+    </div>
+
+    <div class="staff-block">
+      <img src="images/staff/arneli-perez-web.jpg" class="other">
+      <p>
+        <b>Arneli Perez</b>
+        <br>
+        DPT
       </p>
     </div>
 
