Correct staff page

--- a/source/staff.html.erb
+++ b/source/staff.html.erb
@@ -141,15 +141,6 @@ title: Staff | Rehab Staffing Solutions
     </div>
 
     <div class="staff-block">
-      <img src="images/staff/amin-khan-web.jpg" class="other">
-      <p>
-        <b>Amin Khan</b>
-        <br>
-        PT
-      </p>
-    </div>
-
-    <div class="staff-block">
       <img src="images/staff/jacob-kimmig-web.jpg" class="other">
       <p>
         <b>Jacob Kimmig</b>
@@ -186,6 +177,24 @@ title: Staff | Rehab Staffing Solutions
     </div>
 
     <div class="staff-block">
+      <img src="images/staff/annabelle-ogerio-web.jpg" class="other">
+      <p>
+        <b>Annabelle Ogerio</b>
+        <br>
+        DPT
+      </p>
+    </div>
+
+    <div class="staff-block">
+      <img src="images/staff/arnaldo-ogerio-web.jpg" class="other">
+      <p>
+        <b>Arnaldo Ogerio</b>
+        <br>
+        PT
+      </p>
+    </div>
+
+    <div class="staff-block">
       <img src="images/staff/daphnee-paulin-web.jpg" class="other">
       <p>
         <b>Daphnee Paulin</b>
@@ -204,15 +213,6 @@ title: Staff | Rehab Staffing Solutions
     </div>
 
     <div class="staff-block">
-      <img src="images/staff/anthony-quintana.jpg" class="other">
-      <p>
-        <b>Anthony Quintana</b>
-        <br>
-        PTA
-      </p>
-    </div>
-
-    <div class="staff-block">
       <img src="images/staff/quaterian-robinson.jpg" class="other">
       <p>
         <b>Quaterian Robinson</b>
@@ -227,15 +227,6 @@ title: Staff | Rehab Staffing Solutions
         <b>Emilia Rodriguez</b>
         <br>
         PTA
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/sean-stockdale-web.jpg" class="other">
-      <p>
-        <b>Sean Stockdale</b>
-        <br>
-        COTA
       </p>
     </div>
 
@@ -261,6 +252,15 @@ title: Staff | Rehab Staffing Solutions
       <img src="images/staff/justin-thompson-web.jpg" class="other">
       <p>
         <b>Justin Thompson</b>
+        <br>
+        DPT
+      </p>
+    </div>
+
+    <div class="staff-block">
+      <img src="images/staff/megan-walker-web.jpg" class="other">
+      <p>
+        <b>Megan Walker</b>
         <br>
         DPT
       </p>
