Update website for 2020

--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -41,7 +41,7 @@ title: Contact Us | Rehab Staffing Solutions
         <h4>Administrative Contact</h4>
         <p>
           <b>Jacob Kimmig</b>
-          <br> Business Administrator / COO
+          <br> Business Operations
           <br>
           <a href="mailto:jacob@rehabstaffingsolutions.com">jacob@rehabstaffingsolutions.com</a>
           <br>
