--- a/source/staff.html.erb
+++ b/source/staff.html.erb
@@ -33,236 +33,12 @@ title: Staff | Rehab Staffing Solutions
         PTA
       </p>
     </div>
-  </div>
-  <div class="grid">
-    <div class="unit whole center-on-tablets">
-      <h3 id="staff-h3">Team Members</h3>
-    </div>
-  </div>
-  <div class="grid wrap wider align-center center-on-tablets">
-
-    <div class="staff-block">
-      <img src="images/staff/michelle-bixler-web.jpg" class="other">
-      <p class="align-center">
-        <b>Michelle Bixler</b>
-        <br>
-        PTA
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/eva-ceballos-web.jpg" class="other">
-      <p>
-        <b>Eva Ceballos</b>
-        <br>
-        PTA
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/maria-ceballos-web.jpg" class="other">
-      <p>
-        <b>Maria Ceballos</b>
-        <br>
-        DPT
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/melissa-cordell-web.jpg" class="other">
-      <p>
-        <b>Melissa Cordell</b>
-        <br>
-        OT
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/sirles-dewese-web.jpg" class="other">
-      <p>
-        <b>Sirles Dewese</b>
-        <br>
-        PTA
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/albert-edwards-web.jpg" class="other">
-      <p>
-        <b>Albert Edwards</b>
-        <br>
-        DPT
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/joy-garza-web.jpg" class="other">
-      <p>
-        <b>Joy Garza</b>
-        <br>
-        DPT
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/stephanie-gerrard-web.jpg" class="other">
-      <p>
-        <b>Stephanie Gerrard</b>
-        <br>
-        OT
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/jennifer-harris-web.jpg" class="other">
-      <p>
-        <b>Jennifer Harris</b>
-        <br>
-        PTA
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/dustin-hawkins-web.jpg" class="other">
-      <p>
-        <b>Dustin Hawkins</b>
-        <br>
-        PTA
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/naomi-kane-web.jpg" class="other">
-      <p>
-        <b>Naomi Kane</b>
-        <br>
-        PTA
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/jacob-kimmig-web.jpg" class="other">
+    <div class="exec-block">
+      <img src="images/staff/jacob-kimmig-web.jpg" class="exec">
       <p>
         <b>Jacob Kimmig</b>
         <br>
-        Administrator / COO
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/shawn-lavertue-web.jpg" class="other">
-      <p>
-        <b>Shawn Lavertue</b>
-        <br>
-        PTA
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/stephen-lescarbeau-web.jpg" class="other">
-      <p>
-        <b>Stephen Lescarbeau</b>
-        <br>
-        PTA
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/jennifer-mcmurray-web.jpg" class="other">
-      <p>
-        <b>Jennifer McMurray</b>
-        <br>
-        PTA
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/annabelle-ogerio-web.jpg" class="other">
-      <p>
-        <b>Annabelle Ogerio</b>
-        <br>
-        DPT
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/arnaldo-ogerio-web.jpg" class="other">
-      <p>
-        <b>Arnaldo Ogerio</b>
-        <br>
-        PT
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/daphnee-paulin-web.jpg" class="other">
-      <p>
-        <b>Daphnee Paulin</b>
-        <br>
-        COTA
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/arneli-perez-web.jpg" class="other">
-      <p>
-        <b>Arneli Perez</b>
-        <br>
-        DPT
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/quaterian-robinson.jpg" class="other">
-      <p>
-        <b>Quaterian Robinson</b>
-        <br>
-        COTA
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/emilia-rodriguez-web.jpg" class="other">
-      <p>
-        <b>Emilia Rodriguez</b>
-        <br>
-        PTA
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/samantha-stryke-web.jpg" class="other">
-      <p>
-        <b>Samantha Stryke</b>
-        <br>
-        PTA
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/deborah-tatem-web.jpg" class="other">
-      <p>
-        <b>Deborah Tatem</b>
-        <br>
-        COTA
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/justin-thompson-web.jpg" class="other">
-      <p>
-        <b>Justin Thompson</b>
-        <br>
-        DPT
-      </p>
-    </div>
-
-    <div class="staff-block">
-      <img src="images/staff/megan-walker-web.jpg" class="other">
-      <p>
-        <b>Megan Walker</b>
-        <br>
-        DPT
+        Business Operations
       </p>
     </div>
   </div>
