update image roster

--- a/source/staff.html.erb
+++ b/source/staff.html.erb
@@ -20,17 +20,17 @@ title: Staff | Rehab Staffing Solutions
     <div class="exec-block">
       <img src="images/staff/boyd-cantrell-web.jpg" class="exec">
       <p>
-        <b>Boyd Cantrell</b>
+        <b>Boyd Cantrell, DPT</b>
         <br>
-        DPT
+        President
       </p>
     </div>
     <div class="exec-block">
       <img src="images/staff/lisa-cantrell-web.jpg" class="exec">
       <p>
-        <b>Lisa Cantrell</b>
+        <b>Lisa Cantrell, PTA</b>
         <br>
-        PTA
+        CEO
       </p>
     </div>
     <div class="exec-block">
