--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -48,13 +48,13 @@ title: Contact Us | Rehab Staffing Solutions
           <a href="tel:13522393820">352-789-0713</a>
         </p>
         <p>
-          13780 S.E. 100th Ave.
-          <br> Belleview, FL. 34420
+          4815 SE 34th St
+          <br> Ocala, FL 34480
         </p>
       </div>
 
       <div class="unit golden-large center-on-tablets removePadding">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3488.8513969005976!2d-81.98936268490861!3d29.021388982265886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e7cf0de5e92b6f%3A0xa16dcc328cd4ef26!2s13780+SE+100th+Ave%2C+Belleview%2C+FL+34420!5e0!3m2!1sen!2sus!4v1458878013022"
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3484.3536346767073!2d-82.06897048460624!3d29.154249567026383!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e7d2ebf47f707d%3A0x7fafaa08e5178877!2s4815%20SE%2034th%20St%2C%20Ocala%2C%20FL%2034480!5e0!3m2!1sen!2sus!4v1580185713424!5m2!1sen!2sus"
           width="100%" height="450" frameborder="0" style="border:0" allowfullscreen>
         </iframe>
       </div>
